random password generator complete

--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
     <div class="container">
         <div class="mainbox">
             <div class="genText">
-                <h1>Generate a Random Password</h1>
+                <h1>Generate a <br> Random Password</h1>
             </div>
 
             <div class="row">
-                <input class="textbox" type="text" placeholder="Password">
-                <img src="./assets/copy.png" alt="copyIcon">
+                <input class="textbox" id="password" type="text" placeholder="Password">
             </div>
 
             <div class="buttonClick">
                 <img src="./assets/flash.png" alt="generateIcon">
-                <button class="buttonText">Generate Password</button>
+                <button onclick="createPassword()" class="buttonText">Generate Password</button>
             </div>
 
             
